Fix FB text on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -376,4 +376,9 @@ img.fbook {
     margin: 0 auto;
   }
 
+  .fbook-text {
+    display: block;
+    font-size: 0.9em;
+  }
+
 }
